fixed header nav alignment

--- a/assets/css/components/button.css
+++ b/assets/css/components/button.css
@@ -4,6 +4,7 @@
 
  .button {
   position: relative;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   padding: calc(var(--base-spacing) / 2);
